updated home page

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
                 <img src="menu.png" alt="">
               </label>
               <div class="left-menu">
-                  <a href="#">about</a>
+                  <a href="#">home</a>
                   <a href="#">projects</a>
                   <a href="#">experiences</a>
                   <a href="#">interests</a>
+                  <a href="#">resume</a>
                   <a href="#">contact</a>
               </div>
               <a href="#" class="logo">CATHERINE CHEN</a>
@@ -47,6 +48,12 @@
                         interests
                     </div>
                 </div>
+                <div class="photo-grid__item photo-grid__item--4 container">
+                    <img src="temp4.jpg" class="photo-gallery" alt="">
+                    <div class="bottom-left">
+                        resume
+                    </div>
+                </div>
             </div>
             <button class="accordion">ABOUT ME</button>
             <div class="panel">
@@ -59,15 +66,15 @@
                     participating in non profits outside of school. From these, I have developed core competencies,
                     improved technological skills and most importantly, gained lifelong lessons.
                     <br><br>
-                    In my free time you can find me at my pc (which I built) editing videos, drawing digitally or
+                    In my free time you can find me at my pc (which I built with my friend) editing videos, drawing digitally or
                     playing video games, or you can find me around campus participating in club activities or social
-                    gatherings. Feel free to check out my projects and experiences!! :))</p>
+                    gatherings. Feel free to check out my projects, experiences and my resume!! :))</p>
             </div>
             <hr>
             <button class="accordion">A FEW FUN FACTS ABOUT ME...</button>
             <div class="panel">
                 <p>
-                    - My main goal in life would be to create a positive impact on as many individuals as possible.</li>
+                    - My main goal in life is to create a positive impact on as many individuals as possible.</li>
                     <br>
                     - I hope to own a cat and a dog one day.
                     <br>
@@ -94,6 +101,54 @@
                 <p>" " - ICT & Business Teacher
                 <br>
                 " " - Math Teacher
+                <br>
+                " " - some prof
+                <br>
+                " " - some senior friendo
+                </p>
+            </div>
+            <div class="instagram-background">
+                <div>
+                    <p class="instagram-header">
+                        MY INSTAGRAM
+                    </p>
+                </div>
+                <div class="instagram-grid">
+                    <div class="instagram-grid__item instagram-grid__item--1">
+                        <img src="insta1.jpg" class="instagram-photo" alt="">
+                    </div>
+                    <div class="instagram-grid__item instagram-grid__item--2">
+                        <img src="insta2.jpg" class="instagram-photo" alt="">
+                    </div>
+                    <div class="instagram-grid__item instagram-grid__item--3">
+                        <img src="insta3.jpg" class="instagram-photo" alt="">
+                    </div>
+                    <div class="instagram-grid__item instagram-grid__item--4">
+                        <img src="insta4.jpg" class="instagram-photo" alt="">
+                    </div>
+                    <div class="instagram-grid__item instagram-grid__item--5">
+                        <img src="insta5.jpg" class="instagram-photo" alt="">
+                    </div>
+                    <div class="instagram-grid__item instagram-grid__item--6">
+                        <img src="insta6.jpg" class="instagram-photo" alt="">
+                    </div>
+                    <div class="instagram-grid__item instagram-grid__item--7">
+                        <img src="insta7.jpg" class="instagram-photo" alt="">
+                    </div>
+                    <div class="instagram-grid__item instagram-grid__item--8">
+                        <img src="insta8.jpg" class="instagram-photo" alt="">
+                    </div>
+                    <div class="instagram-grid__item instagram-grid__item--9">
+                        <img src="insta9.jpg" class="instagram-photo" alt="">
+                    </div>
+                </div>
+                <div class="instagram-ad">
+                    <a href="http://www.instagram.com/catherinejchen" target="_blank">follow me</a>
+                </div>
+            </div>
+            <div>
+                <p>
+                    
                 </p>
             </div>
         </div>
