--- a/index.html
+++ b/index.html
@@ -3,29 +3,30 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Projects</title>
+        <title>Home</title>
         <link href="StyleSheet.css" rel="StyleSheet" type="text/css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
     <body>
         <div class="nav-container">
             <nav>
-              <input type="checkbox" id="nav-toggle">
-              <label for="nav-toggle" class="burger-menu">
-                <img src="menu.png" alt="">
-              </label>
-              <div class="left-menu">
-                  <a href="#">home</a>
-                  <a href="#">projects</a>
-                  <a href="#">experiences</a>
-                  <a href="#">interests</a>
-                  <a href="#">resume</a>
-                  <a href="#">contact</a>
-              </div>
-              <a href="#" class="logo">CATHERINE CHEN</a>
+                <input type="checkbox" id="nav-toggle">
+                <label for="nav-toggle" class="burger-menu">
+                    <img src="menu.png" alt="">
+                </label>
+                <div class="left-menu">
+                    <a href="index.html">home</a>
+                    <a href="projects.html">projects</a>
+                    <a href="experiences.html">experiences</a>
+                    <a href="interests.html">interests</a>
+                    <a href="resume.html">resume</a>
+                    <a href="contact.html">contact</a>
+                </div>
+                    <a href="#" class="logo">CATHERINE CHEN</a>
             </nav>
         </div>  
-        <div class="about-content">
+        <div class="content">
             <div class="margin-zero">                                                                                                                                                                                                                                           
                 <img class="header-photo" src="AboutMeCover.jpg" alt="About Me Cover">
             </div>
@@ -146,10 +147,16 @@
                     <a href="http://www.instagram.com/catherinejchen" target="_blank">follow me</a>
                 </div>
             </div>
-            <div>
+            <div class="socials-style">
                 <p>
-                    
+                    <a href="contact.html" class="fa fa-envelope"></a>
+                    <i href="https://www.github.com/catherinejchen" target="_blank" class="fa fa-github"></i>
+                    <a href="https://www.instagram.com/catherinejchen" target="_blank" class="fa fa-instagram"></a>
+                    <a href="https://www.linkedin.com/in/catherinejjchen" target="_blank" class="fa fa-linkedin"></a>
                 </p>
+            </div>
+            <div class="ending-style">
+                <p class="text-font center">designed and created by catherine chen</p>
             </div>
         </div>
         <script src="Script.js"></script>
