updated interests page

--- a/index.html
+++ b/index.html
@@ -33,25 +33,25 @@
             <div class="photo-grid">
                 <div class="photo-grid__item photo-grid__item--1 container">
                     <img src="temp1.jpg" class="photo-gallery" alt="">
-                    <div class="bottom-left">
+                    <div class="bottom-left header-font">
                         projects
                     </div>
                 </div>
                 <div class="photo-grid__item photo-grid__item--2 container">
                     <img src="temp2.jpg" class="photo-gallery" alt="">
-                    <div class="bottom-left">
+                    <div class="bottom-left header-font">
                         experiences
                     </div>
                 </div>
                 <div class="photo-grid__item photo-grid__item--3 container">
                     <img src="temp3.jpg" class="photo-gallery" alt="">
-                    <div class="bottom-left">
+                    <div class="bottom-left header-font">
                         interests
                     </div>
                 </div>
                 <div class="photo-grid__item photo-grid__item--4 container">
                     <img src="temp4.jpg" class="photo-gallery" alt="">
-                    <div class="bottom-left">
+                    <div class="bottom-left header-font">
                         resume
                     </div>
                 </div>
@@ -150,7 +150,7 @@
             <div class="socials-style">
                 <p>
                     <a href="contact.html" class="fa fa-envelope"></a>
-                    <i href="https://www.github.com/catherinejchen" target="_blank" class="fa fa-github"></i>
+                    <a href="https://www.github.com/catherinejchen" target="_blank" class="fa fa-github"></a>
                     <a href="https://www.instagram.com/catherinejchen" target="_blank" class="fa fa-instagram"></a>
                     <a href="https://www.linkedin.com/in/catherinejjchen" target="_blank" class="fa fa-linkedin"></a>
                 </p>
