--- a/resume.html
+++ b/resume.html
@@ -40,10 +40,13 @@
             <div class="socials-style">
                 <p>
                     <a href="contact.html" class="fa fa-envelope"></a>
-                    <i href="https://www.github.com/catherinejchen" target="_blank" class="fa fa-github"></i>
+                    <a href="https://www.github.com/catherinejchen" target="_blank" class="fa fa-github"></a>
                     <a href="https://www.instagram.com/catherinejchen" target="_blank" class="fa fa-instagram"></a>
                     <a href="https://www.linkedin.com/in/catherinejjchen" target="_blank" class="fa fa-linkedin"></a>
                 </p>
+            </div>
+            <div class="ending-style">
+                <p class="text-font center">designed and created by catherine chen</p>
             </div>
         </div>
         <script src="Script.js"></script>
