--- a/interests.html
+++ b/interests.html
@@ -6,6 +6,7 @@
         <title>Home</title>
         <link href='https://fonts.googleapis.com/css?family=Great Vibes' rel='stylesheet'>
         <link href="StyleSheet.css" rel="StyleSheet" type="text/css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
     <body>
@@ -37,18 +38,38 @@
                     biggest passions that are still prevelent to this day. Let's get started!!
                 </p>
             </div>
-            <div class="intro-grid">
-                <div class="intro-grid__item intro-grid__item--1">
+            <div class="intro-grid title-font">
+                <div class="intro-grid__item intro-grid__item--1 container">
                     <img src="temp1.jpg" class="photo-gallery" alt="">
+                    <div class="centered">
+                        <p>
+                            music
+                        </p>
+                    </div>
                 </div>
-                <div class="intro-grid__item intro-grid__item--2">
+                <div class="intro-grid__item intro-grid__item--2 container">
                     <img src="temp2.jpg" class="photo-gallery" alt="">
+                    <div class="centered">
+                        <p>
+                            athletics
+                        </p>
+                    </div>
                 </div>
-                <div class="intro-grid__item intro-grid__item--3">
+                <div class="intro-grid__item intro-grid__item--3 container">
                     <img src="temp3.jpg" class="photo-gallery" alt="">
+                    <div class="centered">
+                        <p>
+                            art
+                        </p>
+                    </div>
                 </div>
-                <div class="intro-grid__item intro-grid__item--4">
+                <div class="intro-grid__item intro-grid__item--4 container">
                     <img src="temp4.jpg" class="photo-gallery" alt="">
+                    <div class="centered">
+                        <p>
+                            gaming
+                        </p>
+                    </div>
                 </div>
             </div>
             <div>
@@ -60,44 +81,43 @@
                         <img src="temp1.jpg" class="photo-gallery" alt="">
                     </div>
                     <div class="photo-text-grid__item photo-text-grid__item--2">
-                        <p class="text-font">
-                            At the age of five, I was told to sit on the piano bench and
-                            learn about how the black and white lines represented notes.
-                            Honestly, I can’t say I remember much other than the fact that
-                            there were many times when I didn’t feel like practicing, annoyed
-                            by how slowly I was improving and how repetitive practicing was.
-                            I would complain about
+                        <p class="info-text-font center">
+                            <br>
+                            At the age of five, I began learning piano. Honestly, I can’t say
+                            I remember much other than the fact that there were many times when
+                            I didn’t feel like practicing, annoyed by how slowly I was
+                            improving and how repetitive practicing was. I would complain about
                             this and my parents would ask me if I wanted to quit. Every time,
                             this question would immediately quiet me because I refused to not
                             be able to reach a certain speed or evoke a certain emotion or
                             achieve a certain sense of clarity or so on. Before I knew it, I
                             found myself looking forward to the challenge of being able to
                             overcome these struggles. I started setting more goals and I became
-                            more and more passionate about music, I began to try more
+                            more passionate about music. I began to try more
                             instruments on my own time, in school and in cadet band such as the
                             violin, flute, alto saxophone and ukulele.
                     </div>
                 </div>
                 <div class="memory-grid">
-                    <div class="memory-grid__item memory-grid__item--1">
-                        <img src="temp1.jpg" class="photo-gallery">
-                    </div>
-                    <div class="memory-grid__item memory-grid__item--2 memory-background">
-                        <p class="header-font">
-                            Favourite Memory
-                        </P>
-                        <p class="text-font">
-                            At the Tom Lee Centre in Vancouver of 2014??, I
-                            played my heart out in front of two examiners in a one-hour
-                            performance. Despite my stage fright, I enjoyed the feeling of being
-                            able to demonstrate all the hard work I have put into practicing
-                            within the ten years prior. Through all the tears and smiles, and the
-                            failures and successes, I was able to come out and put on a show;
-                            thus, earning my Associate Diploma of Music in Piano Performance.
-                        </p>
+                    <div class="container">
+                        <img src="temp1.jpg" class="photo-gallery memory-grid__item memory-grid__item--1">
+                        <div class="caption">
+                            <p class="memory-header-font">
+                                Favourite Memory
+                            </P>
+                            <p class="memory-text-font">
+                                At the Tom Lee Centre in Vancouver of 2014??, I
+                                played my heart out in front of two examiners in a one-hour
+                                performance. Despite my stage fright, I enjoyed the feeling of being
+                                able to demonstrate all the hard work I have put into practicing
+                                within the ten years prior. Through all the tears and smiles, and the
+                                failures and successes, I was able to come out and put on a show;
+                                thus, earning my Associate Diploma of Music in Piano Performance.
+                            </p>
+                        </div>
                     </div>
                 </div>
-                <div class="margin-fifty-sides">
+                <div class="margin-thirty-sides lessons-style">
                     <p class="header-font">Lessons:</p>
                     <p class="text-font">
                         <br>- Things don’t just show up within a day (no matter how much we may wish it). Hard work and time creates results.
@@ -154,6 +174,17 @@
                         you won’t get their yourself.
                     </p>
                 </div> -->
+            </div>
+            <div class="socials-style">
+                <p>
+                    <a href="contact.html" class="fa fa-envelope"></a>
+                    <a href="https://www.github.com/catherinejchen" target="_blank" class="fa fa-github"></a>
+                    <a href="https://www.instagram.com/catherinejchen" target="_blank" class="fa fa-instagram"></a>
+                    <a href="https://www.linkedin.com/in/catherinejjchen" target="_blank" class="fa fa-linkedin"></a>
+                </p>
+            </div>
+            <div class="ending-style">
+                <p class="text-font center">designed and created by catherine chen</p>
             </div>
         </div>
         <script src="Script.js"></script>
