updated resume page

--- a/resume.html
+++ b/resume.html
@@ -31,11 +31,11 @@
                 <img class="header-photo" src="AboutMeCover.jpg" alt="About Me Cover">
             </div>
             <div class="margin-thirty center">
-                <a href="CatherineChen_resume.pdf" target="_blank" class="header-font no-decoration">view my resume</a>
+                <a href="./CatherineChen_resume.pdf" target="_blank" class="header-font no-decoration">view my resume</a>
                 <p class="blurb-font">Want to hire me? Get in contact with me <a href="contact.html" class="no-decoration"><u>here</u>.</a></p>
             </div>
             <div class="margin-thirty">
-                <iframe src="CatherineChen_resume.pdf" class="resume-style"> </iframe>
+                <iframe src="./CatherineChen_resume.pdf" class="resume-style"> </iframe>
             </div>
             <div class="socials-style">
                 <p>
