updates and tests for all pages

--- a/contact.html
+++ b/contact.html
@@ -30,12 +30,41 @@
             <div class="margin-zero">                                                                                                                                                                                                                                           
                 <img class="header-photo" src="AboutMeCover.jpg" alt="About Me Cover">
             </div>
-            <div class="margin-thirty center">
-                <a href="CatherineChen_Resume.pdf" target="_blank" class="header-font no-decoration">view my resume</a>
-                <p class="blurb-font">Want to hire me? Get in contact with me <a href="contact.html" class="no-decoration"><u>here</u>.</a></p>
-            </div>
             <div class="margin-thirty">
-                <iframe src="CatherineChen_Resume.pdf" class="resume-style"> </iframe>
+                <p class="header-font center">
+                    Get in touch with me!
+                </p>
+            </div>
+            <div class="contact-container">
+                <form action="action_page.php">
+                    <div class="contact-grid">
+                        <div class="contact-grid__item contact-grid__item--1">
+                            <input type="text-important" id="fullname" name="fullname" placeholder="full name">
+                        </div>
+                        <div class="contact-grid__item contact-grid__item--2">
+                            <input type="text-important" id="email" name="email" placeholder="e - mail">
+                        </div>
+                    </div>
+                    <br>
+                    <input type="text" id="num" name="phone number" placeholder="phone number">
+
+                    <br>
+                    <br>
+
+                  <!-- <label for="country">Country</label>
+                  <select id="country" name="country">
+                    <option value="australia">Australia</option>
+                    <option value="canada">Canada</option>
+                    <option value="usa">USA</option>
+                  </select> -->
+
+                  <textarea id="subject" name="subject" placeholder="your message" style="height:40px"></textarea>
+                  
+                  <br>
+
+                  <input type="submit" value="Submit">
+              
+                </form>
             </div>
             <div class="socials-style">
                 <p>
