--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <nav>
                 <input type="checkbox" id="nav-toggle">
                 <label for="nav-toggle" class="burger-menu">
-                    <img src="menu.png" alt="">
+                    <img src="menu.png" class="menu" alt="">
                 </label>
                 <div class="left-menu">
                     <a href="index.html">home</a>
@@ -32,28 +32,36 @@
             </div>
             <div class="photo-grid">
                 <div class="photo-grid__item photo-grid__item--1 container">
-                    <img src="temp1.jpg" class="photo-gallery" alt="">
-                    <div class="bottom-left header-font">
-                        projects
-                    </div>
+                    <a href="projects.html" alt="">
+                        <img src="temp1.jpg" class="photo-gallery photo" alt="">
+                        <div class="bottom-left header-font">
+                            Projects
+                        </div>
+                    </a>
                 </div>
                 <div class="photo-grid__item photo-grid__item--2 container">
-                    <img src="temp2.jpg" class="photo-gallery" alt="">
-                    <div class="bottom-left header-font">
-                        experiences
-                    </div>
+                    <a href="experiences.html" alt="">
+                        <img src="temp2.jpg" class="photo-gallery photo" alt="">
+                        <div class="bottom-left header-font">
+                            Experiences
+                        </div>
+                    </a>
                 </div>
                 <div class="photo-grid__item photo-grid__item--3 container">
-                    <img src="temp3.jpg" class="photo-gallery" alt="">
-                    <div class="bottom-left header-font">
-                        interests
-                    </div>
+                    <a href="interests.html" alt="">
+                        <img src="temp3.jpg" class="photo-gallery photo" alt="">
+                        <div class="bottom-left header-font">
+                            Interests
+                        </div>
+                    </a>
                 </div>
                 <div class="photo-grid__item photo-grid__item--4 container">
-                    <img src="temp4.jpg" class="photo-gallery" alt="">
-                    <div class="bottom-left header-font">
-                        resume
-                    </div>
+                    <a href="resume.html" alt="">
+                        <img src="temp4.jpg" class="photo-gallery photo" alt="">
+                        <div class="bottom-left header-font">
+                            Resume
+                        </div>
+                    </a>
                 </div>
             </div>
             <button class="accordion">ABOUT ME</button>
@@ -116,31 +124,49 @@
                 </div>
                 <div class="instagram-grid">
                     <div class="instagram-grid__item instagram-grid__item--1">
-                        <img src="insta1.jpg" class="instagram-photo" alt="">
+                        <a target="_blank" href="https://www.instagram.com/p/BzHHnEbhdsT/?utm_source=ig_web_copy_link">
+                            <img src="insta1.jpg" class="instagram-photo" alt="">
+                        </a>
                     </div>
                     <div class="instagram-grid__item instagram-grid__item--2">
-                        <img src="insta2.jpg" class="instagram-photo" alt="">
+                        <a target="_blank" href="https://www.instagram.com/p/Bzl8RFyhWv6/?utm_source=ig_web_copy_link">
+                            <img src="insta2.jpg" class="instagram-photo" alt="">
+                        </a>
                     </div>
                     <div class="instagram-grid__item instagram-grid__item--3">
-                        <img src="insta3.jpg" class="instagram-photo" alt="">
+                        <a target="_blank" href="https://www.instagram.com/p/BxQhDENB-ab/?utm_source=ig_web_copy_link">
+                            <img src="insta3.jpg" class="instagram-photo" alt="">
+                        </a>
                     </div>
                     <div class="instagram-grid__item instagram-grid__item--4">
-                        <img src="insta4.jpg" class="instagram-photo" alt="">
+                        <a target="_blank" href="https://www.instagram.com/p/By9KvGIBv1L/?utm_source=ig_web_copy_link">
+                            <img src="insta4.jpg" class="instagram-photo" alt="">
+                        </a>
                     </div>
                     <div class="instagram-grid__item instagram-grid__item--5">
-                        <img src="insta5.jpg" class="instagram-photo" alt="">
+                        <a target="_blank" href="https://www.instagram.com/p/BktsuAHBYqZ/?utm_source=ig_web_copy_link">
+                            <img src="insta5.jpg" class="instagram-photo" alt="">
+                        </a>
                     </div>
                     <div class="instagram-grid__item instagram-grid__item--6">
-                        <img src="insta6.jpg" class="instagram-photo" alt="">
+                        <a target="_blank" href="https://www.instagram.com/p/BoFV5erhD-e/?utm_source=ig_web_copy_link">
+                            <img src="insta6.jpg" class="instagram-photo" alt="">
+                        </a>
                     </div>
                     <div class="instagram-grid__item instagram-grid__item--7">
-                        <img src="insta7.jpg" class="instagram-photo" alt="">
+                        <a target="_blank" href="https://www.instagram.com/p/BqDoWWkl4W4/?utm_source=ig_web_copy_link">
+                            <img src="insta7.jpg" class="instagram-photo" alt="">
+                        </a>
                     </div>
                     <div class="instagram-grid__item instagram-grid__item--8">
-                        <img src="insta8.jpg" class="instagram-photo" alt="">
+                        <a target="_blank" href="https://www.instagram.com/p/BnPNsbwhN2p/?utm_source=ig_web_copy_link">
+                            <img src="insta8.jpg" class="instagram-photo" alt="">
+                        </a>
                     </div>
                     <div class="instagram-grid__item instagram-grid__item--9">
-                        <img src="insta9.jpg" class="instagram-photo" alt="">
+                        <a target="_blank" href="https://www.instagram.com/p/BuFN6UVFJo-/?utm_source=ig_web_copy_link">
+                            <img src="insta9.jpg" class="instagram-photo" alt="">
+                        </a>
                     </div>
                 </div>
                 <div class="instagram-ad">
