--- a/interests.html
+++ b/interests.html
@@ -14,7 +14,7 @@
             <nav>
                 <input type="checkbox" id="nav-toggle">
                 <label for="nav-toggle" class="burger-menu">
-                    <img src="menu.png" alt="">
+                    <img src="menu.png" class="menu" alt="">
                 </label>
                 <div class="left-menu">
                     <a href="index.html">home</a>
@@ -43,7 +43,7 @@
                     <img src="temp1.jpg" class="photo-gallery" alt="">
                     <div class="centered">
                         <p>
-                            music
+                            art
                         </p>
                     </div>
                 </div>
@@ -59,7 +59,7 @@
                     <img src="temp3.jpg" class="photo-gallery" alt="">
                     <div class="centered">
                         <p>
-                            art
+                            gaming
                         </p>
                     </div>
                 </div>
@@ -67,11 +67,12 @@
                     <img src="temp4.jpg" class="photo-gallery" alt="">
                     <div class="centered">
                         <p>
-                            gaming
+                            music
                         </p>
                     </div>
                 </div>
             </div>
+
             <div>
                 <p class="great-vibes-font center margin-sixty">
                     Music
@@ -126,6 +127,119 @@
                     </p>
                 </div>
             </div>
+
+
+            <div class="block-style">
+                <p class="great-vibes-font center margin-sixty">
+                    Music
+                </p>
+                <div class="photo-text-grid">
+                    <div class="photo-text-grid__item photo-text-grid__item--1">
+                        <img src="temp1.jpg" class="photo-gallery" alt="">
+                    </div>
+                    <div class="photo-text-grid__item photo-text-grid__item--2">
+                        <p class="info-text-font center">
+                            <br>
+                            At the age of five, I began learning piano. Honestly, I can’t say
+                            I remember much other than the fact that there were many times when
+                            I didn’t feel like practicing, annoyed by how slowly I was
+                            improving and how repetitive practicing was. I would complain about
+                            this and my parents would ask me if I wanted to quit. Every time,
+                            this question would immediately quiet me because I refused to not
+                            be able to reach a certain speed or evoke a certain emotion or
+                            achieve a certain sense of clarity or so on. Before I knew it, I
+                            found myself looking forward to the challenge of being able to
+                            overcome these struggles. I started setting more goals and I became
+                            more passionate about music. I began to try more
+                            instruments on my own time, in school and in cadet band such as the
+                            violin, flute, alto saxophone and ukulele.
+                    </div>
+                </div>
+                <div class="memory-grid">
+                    <div class="container">
+                        <img src="temp1.jpg" class="photo-gallery memory-grid__item memory-grid__item--1">
+                        <div class="caption-white">
+                            <p class="memory-header-font">
+                                Favourite Memory
+                            </P>
+                            <p class="memory-text-font">
+                                At the Tom Lee Centre in Vancouver of 2014??, I
+                                played my heart out in front of two examiners in a one-hour
+                                performance. Despite my stage fright, I enjoyed the feeling of being
+                                able to demonstrate all the hard work I have put into practicing
+                                within the ten years prior. Through all the tears and smiles, and the
+                                failures and successes, I was able to come out and put on a show;
+                                thus, earning my Associate Diploma of Music in Piano Performance.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="margin-thirty-sides lessons-style">
+                    <p class="header-font">Lessons:</p>
+                    <p class="text-font">
+                        <br>- Things don’t just show up within a day (no matter how much we may wish it). Hard work and time creates results.
+                        <br>- Being able to prioritize and managing time will improve your quality of life greatly.
+                        <br>- There are ups and downs in life but you WILL get through.
+                    </p>
+                </div>
+            </div>
+
+
+            <div>
+                <p class="great-vibes-font center margin-sixty">
+                    Music
+                </p>
+                <div class="photo-text-grid">
+                    <div class="photo-text-grid__item photo-text-grid__item--1">
+                        <img src="temp1.jpg" class="photo-gallery" alt="">
+                    </div>
+                    <div class="photo-text-grid__item photo-text-grid__item--2">
+                        <p class="info-text-font center">
+                            <br>
+                            At the age of five, I began learning piano. Honestly, I can’t say
+                            I remember much other than the fact that there were many times when
+                            I didn’t feel like practicing, annoyed by how slowly I was
+                            improving and how repetitive practicing was. I would complain about
+                            this and my parents would ask me if I wanted to quit. Every time,
+                            this question would immediately quiet me because I refused to not
+                            be able to reach a certain speed or evoke a certain emotion or
+                            achieve a certain sense of clarity or so on. Before I knew it, I
+                            found myself looking forward to the challenge of being able to
+                            overcome these struggles. I started setting more goals and I became
+                            more passionate about music. I began to try more
+                            instruments on my own time, in school and in cadet band such as the
+                            violin, flute, alto saxophone and ukulele.
+                    </div>
+                </div>
+                <div class="memory-grid">
+                    <div class="container">
+                        <img src="temp1.jpg" class="photo-gallery memory-grid__item memory-grid__item--1">
+                        <div class="caption">
+                            <p class="memory-header-font">
+                                Favourite Memory
+                            </P>
+                            <p class="memory-text-font">
+                                At the Tom Lee Centre in Vancouver of 2014??, I
+                                played my heart out in front of two examiners in a one-hour
+                                performance. Despite my stage fright, I enjoyed the feeling of being
+                                able to demonstrate all the hard work I have put into practicing
+                                within the ten years prior. Through all the tears and smiles, and the
+                                failures and successes, I was able to come out and put on a show;
+                                thus, earning my Associate Diploma of Music in Piano Performance.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="margin-thirty-sides lessons-style">
+                    <p class="header-font">Lessons:</p>
+                    <p class="text-font">
+                        <br>- Things don’t just show up within a day (no matter how much we may wish it). Hard work and time creates results.
+                        <br>- Being able to prioritize and managing time will improve your quality of life greatly.
+                        <br>- There are ups and downs in life but you WILL get through.
+                    </p>
+                </div>
+            </div>
+
             <!-- <div>
                 <p class="great-vibes-font center margin-sixty">
                     Gaming
