--- a/experiences.html
+++ b/experiences.html
@@ -30,13 +30,11 @@
             <div class="margin-zero">                                                                                                                                                                                                                                           
                 <img class="header-photo" src="AboutMeCover.jpg" alt="About Me Cover">
             </div>
-            <div class="margin-thirty center">
-                <a href="CatherineChen_Resume.pdf" target="_blank" class="header-font no-decoration">view my resume</a>
-                <p class="blurb-font">Want to hire me? Get in contact with me <a href="contact.html" class="no-decoration"><u>here</u>.</a></p>
-            </div>
-            <div class="margin-thirty">
-                <iframe src="CatherineChen_Resume.pdf" class="resume-style"> </iframe>
-            </div>
+            <div>
+                <p class="header-font center margin-thirty">
+                    ~ coming soon ~
+                </p>
+        </div>
             <div class="socials-style">
                 <p>
                     <a href="contact.html" class="fa fa-envelope"></a>
