updated projects page due to flexbox issues

--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
                     <a href="resume.html">resume</a>
                     <a href="contact.html">contact</a>
                 </div>
-                <!-- THIS DUMB THING IS BEING CHANGED BY THE STYLESHEET THAT HAS THE FLEXBOX IN IT.. MAKE IT STOP -->
+                <!-- THIS IS BEING CHANGED BY THE STYLESHEET THAT HAS THE FLEXBOX-->
                     <a href="#" class="logo">CATHERINE CHEN</a>
             </nav>
         </div>  
@@ -90,7 +90,8 @@
                         </div>
                     </div>
                 </div> -->
-                
+               
+            <div class="flex-container">
                 <div>
                     <img class="photo-gallery w3-hover-opacity" style="cursor: pointer" src="temp1.jpg" alt=""
                     onclick="document.getElementById('modal01').style.display='block'">
@@ -596,8 +597,8 @@
                         </div>
                     </div>
                 </div>
+            </div>
 
-              </div>
             <div class="socials-style">
                 <p>
                     <a href="contact.html" class="fa fa-envelope"></a>
